[package]
autotests = false
edition = "2018"
name = "sorted"
publish = false
version = "0.0.0"
[dependencies]
quote = "*"
syn = {version="*", features=["full", "visit-mut"] }
proc-macro2 = "*"

[dev-dependencies]
trybuild = "1.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"
